# c64-monster-attack

./: .gitignore  CMakeLists.txt  README.md  game.pe  game_tiles.cst  linker-script.ld  map.yaml
.github/workflows/: build.yml  publish.yaml
scripts/: cst2code.py  disk.txt.in  map2code.py  spm2code.py  syms2labels.py  trigconst.py
sprites/: arrow.spm  arrow_east.spm  arrow_north.spm  arrow_south.spm  arrow_west.spm  bow_east.spm  bow_north.spm  bow_south.spm  bow_west.spm  coin.spm  flail.spm  heart.spm  player_attack_east.spm  player_attack_north.spm  player_attack_south.spm  player_attack_west.spm  player_east.spm  player_north.spm  player_south.spm  player_west.spm  skeleton.spm  skeleton_archer.spm  sword_east.spm  sword_north.spm  sword_south.spm  sword_west.spm
src/: bcd.c  bcd.h  chars.h  color.h  draw.c  draw.h  input.c  input.h  isr-handler.S  isr.c  isr.h  main.c  map.c  map.h  mobs.c  mobs.h  move.c  move.h  player-sprite.c  player-sprite.h  player.c  player.h  reg.h  screen.S  sprite.c  sprite.h  store.c  store.h  tick.c  tick.h  util.c  util.h
src/mobs/: arrow.c  coin.c  heart.c  skeleton.c  skeleton_archer.c
